<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.example.diary.viewModel.AddViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/addTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_title"
            android:textColor="@color/text_80"
            android:textSize="35sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <EditText
            android:id="@+id/addEditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_Title"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/addTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
            android:id="@+id/addEditContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:hint="@string/add_edit_content"

            app:layout_constraintTop_toBottomOf="@+id/addEditTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/add_edit_save"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/addEditContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>