<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.example.diary.viewModel.DiaryDialogViewModel" />
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/dialog_shape"
        android:orientation="vertical"
        android:padding="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTitle"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/editEditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/editEditContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/editEditCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editCancel"
                android:layout_marginStart="10dp"/>
            <Button
                android:id="@+id/editEditSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editSave"
                android:layout_marginStart="10dp"/>
        </LinearLayout>



    </LinearLayout>


</layout>